--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -211,7 +211,7 @@ html {
   font-size: 14px; }
 
 body {
-  color: #89837c;
+  color: #000000;
   font-family: arial, sans-serif;
   font-weight: 300;
   line-height: 1.5; }
