--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,3 @@
-/*!
- * Project_Name: Compass Starter
- * Author: Ariona, Rian
- * Email: yans_fied[at]yahoo.com
- * Url: http://www.ariona.net
- */
-/*=========================================== 
- * Importing CSS Libraries
- *===========================================*/
 article,
 aside,
 details,
@@ -259,6 +250,18 @@ form input[type="submit"], form button, form input[type="reset"] {
 /*
  * Reusable Components Style
  */
+
+.verse {
+    text-transform: none;
+    text-decoration: none;
+    color: #544531;
+}
+
+ .color {
+  text-decoration: none;
+  color: #acacb1; 
+ }
+
 .button, form input[type="submit"], form button, form input[type="reset"] {
   display: inline-block;
   background: #e2caae;
@@ -1422,8 +1425,7 @@ form input[type="submit"], form button, form input[type="reset"] {
     font-size: 12px;
     font-size: 0.8571428571em;
     color: #a59e95;
-    font-family: "Novecento Sans", "Raleway", "Noto Sans" "Open Sans", sans-serif;
-    text-transform: lowercase; }
+    font-family: "Novecento Sans", "Raleway", "Noto Sans" "Open Sans", sans-serif; }
     .seremon-list .seremon-meta .pastor {
       margin-bottom: 5px; }
     .seremon-list .seremon-meta .fa {
@@ -1466,7 +1468,7 @@ form input[type="submit"], form button, form input[type="reset"] {
     font-weight: 600; }
 
 .arrow {
-  list-style-image: url(images/arrow.png);
+  list-style-image: url(../../images/arrow.png);
   list-style-position: inside; }
   .arrow li {
     padding: 10px 0;
