--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1319,6 +1319,9 @@ form input[type="submit"], form button, form input[type="reset"] {
     text-transform: uppercase;
     color: #544531; }
 
+p img:hover {
+    opacity: 0.2;
+}
 .news {
   text-align: center;
   margin-bottom: 30px; }
