--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,7 +24,7 @@ audio:not([controls]) {
   display: none; }
 
 html {
-  background: #fff;
+  background: lightblue;
   color: #000;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%; }
@@ -1157,7 +1157,6 @@ form input[type="submit"], form button, form input[type="reset"] {
 .site-header {
   position: relative;
   z-index: 999;
-  background: white;
   text-align: center;
   padding: 50px 0 30px; }
 
