--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,7 +24,7 @@ audio:not([controls]) {
   display: none; }
 
 html {
-  background: lightblue;
+  background: #fafafa;
   color: #000;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%; }
